modules: inline: some improvements
* Up search limit from 7 to 10.
* Up description length from 180 to 260.
* Show studios if exists.
* Show format if exists.
* Show the short description.
* Add the result URL in a button.
* Add the trailer URL in a button if exists.
* If the query is invalid, return the inline help.

--- a/amime/locales/en-US.yml
+++ b/amime/locales/en-US.yml
@@ -54,6 +54,15 @@ description:
 short_description:
     Short description
 
+help:
+    ❓ Help
+
+inline: |
+    Touch the button below to learn how to use my <b>inline mode</b>.
+
+    You will be redirected to <b>my private one</b> and learn how to use it there.
+
+
 # Buttons
 read_more_button:
     🤓 Read more...
