--- a/amime/locales/en-US.yml
+++ b/amime/locales/en-US.yml
@@ -79,6 +79,13 @@ channel:
 
 group:
     Group
+        
+module:
+    Module
+    
+name:
+    Name
+
 
 # Buttons
 read_more_button:
@@ -107,3 +114,44 @@ inline_button:
 
 collaborators_button:
     👷‍♀️ Collaborators
+
+request_episodes_button:
+    🙋‍♀️ Request episodes
+
+
+# Helps
+anime_help: |
+    <b>Help on</b>: anime
+
+    My <b>anime module</b> allows users to see a basic list of information about the specific anime based on {anilist}, but also allows users to watch episodes, for that, use the <b>{request_episodes_button}</b> button at the bottom of all anime, with it, a message requesting episodes of such anime will be sent to <i>our collaborators</i> in your language, they will check the episodes of that anime in their language, and <b>if they exist</b>, they will add the list of episodes in their language, however, if there are no episodes of the anime in question in your language or subtitled, they will not be able to do anything, but you can watch them subtitled in the language <b>you prefer</b>.
+    
+    <b>How to use</b>?
+        Send me the anime using the <b>inline module</b> or use the command <code>/anime &lt;id&gt;</code>.
+
+manga_help: |
+    <b>Help on</b>: manga
+
+    My <b>manga module</b> allows users to see a basic list of information about the specific manga based on {anilist}.
+    
+    <b>How to use</b>?
+        Send me the manga using the <b>inline module</b> or use the command <code>/manga &lt;id&gt;</code>.
+
+inline_help: |
+    <b>Help on</b>: inline
+
+    My <b>inline module</b> allows users to search for anime or manga, and can also only see the photo if <b>you prefer</b>.
+    
+    <b>How to use</b>?
+        Type my username and proceed: @{bot_username}
+        
+        <b>Flags</b>:
+            <code>!a</code> - search anime.
+            <code>!m</code> - search manga.
+            <code>!g</code> - use gallery mode (photos only).
+            
+        <b>Examples</b>:
+            <code>@{bot_username} !a !g Naruto Shippuden</code>
+            <code>@{bot_username} !m Jujutsu Kaizen</code>
+            <code>@{bot_username} !a Shingeki no Kyojin</code>
+        
+        Test it yourself. 😅
