modules: inline: switch from "Read more" to "View more"

--- a/amime/locales/en.yml
+++ b/amime/locales/en.yml
@@ -282,6 +282,9 @@ mark_as_watched_button:
 mark_as_unwatched_button:
     👁️ Mark as unwatched
 
+view_more_button:
+    👁️‍🗨️ View more
+
 
 # Help texts
 anime_help: |
