--- a/amime/locales/en.yml
+++ b/amime/locales/en.yml
@@ -99,6 +99,18 @@ season:
 all:
     All
 
+other:
+    Other
+
+bad_quality:
+    Bad quality
+
+wrong_episode:
+    Wrong episode
+
+wrong_title:
+    Wrong title
+
 
 # Texts
 not_found:
@@ -232,6 +244,17 @@ missing_items_episode: |
 settings_season:
     Choose below which season you want to see.
 
+report:
+    Choose the type of report you want to do below.
+
+reported_the_same_episode_in_last_24h: |
+    You have already reported an episode in the past 24 hours.
+    
+    Date: {date}
+
+episode_successfully_reported:
+    You successfully reported the episode!
+
 
 # Buttons
 read_more_button:
@@ -314,6 +337,9 @@ view_more_button:
 
 season_button:
     📜 Season
+
+report_button:
+    ⛔ Report
 
 
 # Help texts
