anime: manage: process the episode without disturbing the collaborator

--- a/amime/locales/pt.yml
+++ b/amime/locales/pt.yml
@@ -111,9 +111,6 @@ wrong_episode:
 wrong_title:
     Título errado
 
-downloading:
-    Baixando
-
 
 # Texts
 not_found:
@@ -216,7 +213,7 @@ duplicate_episode_number:
     Este anime já tem um episódio com esse número neste mesmo idioma, você não pode colocar dois episódios com o mesmo número, escolher outro ou excluir o outro episódio.
 
 episode_added:
-    O episódio foi adicionado com sucesso!
+    O episódio está sendo processado, logo aparecerá na lista de episódios.
 
 episodes: |
     Aqui estão os episódios disponíveis para o anime <b>{name}</b> (<b>ID</b>: <code>{id}</code>), divirta-se!
