--- a/amime/locales/en.yml
+++ b/amime/locales/en.yml
@@ -111,9 +111,6 @@ wrong_episode:
 wrong_title:
     Wrong title
 
-downloading:
-    Downloading
-
 
 # Texts
 not_found:
@@ -216,7 +213,7 @@ duplicate_episode_number:
     This anime already has an episode with that number in that same language, you cannot put two episodes with the same number, choose another one or delete the other episode.
 
 episode_added:
-    The episode was successfully added!
+    The episode is being processed, it will appear on the list of episodes soon.
 
 episodes: |
     Here are the episodes available for the anime <b>{name}</b> (<b>ID</b>: <code>{id}</code>), have fun!
