amime: add a button to group and channel in start command

--- a/amime/locales/pt.yml
+++ b/amime/locales/pt.yml
@@ -370,6 +370,12 @@ notify_users_button:
 watch_button:
     🎥 Assistir
 
+group_button:
+    👥 Grupo
+
+channel_button:
+    📢 Canal
+
 
 # Help texts
 anime_help: |
