--- a/amime/locales/en.yml
+++ b/amime/locales/en.yml
@@ -370,6 +370,12 @@ notify_users_button:
 watch_button:
     🎥 Watch
 
+group_button:
+    👥 Group
+
+channel_button:
+    📢 Channel
+
 
 # Help texts
 anime_help: |
